<resources>
    <string name="app_name">Kyrsach</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDCFKv2ubhy6kttlzVPVaANGGU2CuY_HuA
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Nav drawer open</string>
    <string name="drawer_close">Nav drawer close</string>
    <string name="string_desc_nav_drawer">Navigation drawer</string>
    <string name="string_search">Поиск</string>
    <string name="string_geolocation">Геолокация</string>
    <string name="string_access_to_geolocation">Доступ к местоположению</string>
    <string name="string_show_radius">Показывать радиус</string>
    <string name="string_find_me">Найти меня</string>
    <string name="string_desc_geo_status">Geo status</string>
    <string name="string_desc_nav_logo">Nav Logo</string>
    <string name="string_settings">Настройки</string>
    <string name="string_search_radius">Радиус поиска:</string>
    <string name="string_choose_category">Выберите категорию</string>
    <string name="string_desc_place_image">Place Image</string>
    <string name="string_desc_place_marker">Place marker</string>
</resources>
