<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search_gray"
        android:title="@string/string_search" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/string_settings" />

    <item android:title="@string/string_geolocation">
        <menu>
            <item
                android:id="@+id/navGeoStatus"
                android:title="@string/string_access_to_geolocation" />
            <item
                android:id="@+id/navRadiusStatus"
                android:title="@string/string_show_radius" />
            <item
                android:id="@+id/navFindMe"
                android:title="@string/string_find_me" />
        </menu>
    </item>
</menu>